--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
-ROM_URL=https://dl.google.com/developers/android/sc/images/ota/redfin-ota-spp2.210219.008-3d61e529.zip
-ZIP_NAME=update.zip
-OS_TYPE=Pixel
+ROM_URL=https://xiaomirom.com/download/redmi-note-10-pro-sweet-stable-V13.0.3.0.SKFEUXM/
+ZIP_NAME=miui_SWEETEEAGlobal_V13.0.3.0.SKFEUXM_73299ee316_12.0.zip
+OS_TYPE=miui
 BUILD_TYPE=AB
-REPACK_NAME=SGSI.zip
+REPACK_NAME=miui_SWEETEEAGlobal_V13.0.3.0.SKFEUXM_73299ee316_12.0.zip
 VERSION=12
